добавила/удалила href

--- a/catalog.html
+++ b/catalog.html
@@ -24,8 +24,8 @@
       </h1>
       <a href="tel:+78125550555">+7 (812) 555-05-55</a>
       <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <a>Равшан Джамшутович</a>
-      <a>Выйти</a>
+      <a href="#">Равшан Джамшутович</a>
+      <a href="#">Выйти</a>
       <!--Вместо надписи будет иконка-->
       <a href="#">Мои заказы</a>
       <a href="#">Личный кабинет</a>
@@ -38,7 +38,7 @@
             <a href="#">Компания</a>
           </li>
           <li>
-            <a href="#">Каталог</a>
+            <a>Каталог</a>
           </li>
           <li>
             <a href="#">Новости</a>
@@ -63,7 +63,7 @@
             <!--Вместо надписи будет иконка-->
           </li>
           <li>
-            <a href="#">КАТАЛОГ</a>
+            <a>КАТАЛОГ</a>
           </li>
           <li>
             <a href="#">ИНСТРУМЕНТ</a>
@@ -145,16 +145,16 @@
 
           <li><a href="#">По типу</a></li>
           <li><a href="#">По функционалу</a></li>
-          <li><a>Вверх</a></li>
+          <li><a href="#">Вверх</a></li>
           <!--Вместо надписи будет иконка-->
-          <li><a>Вниз</a></li>
+          <li><a href="#">Вниз</a></li>
           <!--Вместо надписи будет иконка-->
         </ul>
         <h2>Перфораторы</h2>
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
@@ -166,8 +166,8 @@
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
@@ -180,8 +180,8 @@
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <p>NEW</p>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
@@ -194,82 +194,82 @@
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <p>NEW</p>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
+          <a href="#">15500 Р.</a>
+          <span>22500 Р.</span>
           <img
             src="https://via.placeholder.com/220x318"
             alt="Перфоратор BOSCH BFG 3000"
             width="220"
             height="318"
           />
-          <a href="#">15500 Р.</a>
-          <span>22500 Р.</span>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
+          <a href="#">25500 Р.</a>
+          <span>30500 Р.</span>
           <img
             src="https://via.placeholder.com/220x318"
             alt="Перфоратор BOSCH BFG 6000"
             width="220"
             height="318"
           />
-          <a href="#">25500 Р.</a>
-          <span>30500 Р.</span>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <p>NEW</p>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
+          <a href="#">12500 Р.</a>
           <img
             src="https://via.placeholder.com/220x318"
             alt="Перфоратор BOSCH BFG 2000"
             width="220"
             height="318"
           />
-          <a href="#">12500 Р.</a>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <p>NEW</p>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
+          <a href="#">15500 Р.</a>
+          <span>22500 Р.</span>
           <img
             src="https://via.placeholder.com/220x318"
             alt="Перфоратор BOSCH BFG 6000"
             width="220"
             height="318"
           />
-          <a href="#">15500 Р.</a>
-          <span>22500 Р.</span>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
+          <a href="#">25500 Р.</a>
+          <span>30500 Р.</span>
           <img
             src="https://via.placeholder.com/220x318"
             alt="Перфоратор BOSCH BFG 6000"
             width="220"
             height="318"
           />
-          <a href="#">25500 Р.</a>
-          <span>30500 Р.</span>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <p>NEW</p>
-          <a>Купить</a>
-          <a>В закладки</a>
+          <a href="#">Купить</a>
+          <a href="#">В закладки</a>
+          <a href="#">12500 Р.</a>
           <img
             src="https://via.placeholder.com/220x318"
             alt="Перфоратор BOSCH BFG 6000"
             width="220"
             height="318"
           />
-          <a href="#">12500 Р.</a>
         </article>
         <p>
           <!--Это будет поп-ап-->
@@ -314,7 +314,7 @@
             <a href="#">Новости</a>
           </li>
           <li>
-            <a href="#">Каталог</a>
+            <a>Каталог</a>
           </li>
           <li>
             <a href="#">Доставка</a>
