подключила контентную графику
-разместила графику в img;
-подключила контентную графику;
-подключила фавиконку;
-добавила на главную слайд с дрелями

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Техномарт</title>
+    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="img/180.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
   </head>
   <body>
     <header>
@@ -78,17 +82,27 @@
           <li>
             <h3>Доставка</h3>
             <a href="#">БЕСПЛАТНО</a>
+
+            <button type="button" disabled>Назад</button>
+            <button type="button">Вперед</button>
+            <h3>ПЕРФОРАТОРЫ</h3>
+            <p>Настоящие мужские игрушки</p>
+            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
             <img
               src="https://via.placeholder.com/620x266"
               alt="Рабочий сверлит стену перфоратором"
               width="620"
               height="266"
             />
-            <button type="button" disabled>Назад</button>
-            <button type="button">Вперед</button>
-            <h3>ПЕРФОРАТОРЫ</h3>
-            <p>Настоящие мужские игрушки</p>
+            <h3>ДРЕЛИ</h3>
+            <p>Соседям на радость!</p>
             <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+            <img
+              src="https://via.placeholder.com/620x266"
+              alt="Рабочий сверлит стену дрелью"
+              width="620"
+              height="266"
+            />
           </li>
         </ul>
       </section>
@@ -100,19 +114,19 @@
           <a href="#">25500 Р.</a>
           <span>32500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg9000.jpg"
             alt="Перфоратор BOSCH BFG 9000"
-            width="220"
-            height="318"
+            width="184"
+            height="164"
           />
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg3000.jpg"
             alt="Перфоратор BOSCH BFG 3000"
-            width="220"
-            height="318"
+            width="127"
+            height="112"
           />
           <a href="#">15500 Р.</a>
           <span>22500 Р.</span>
@@ -120,10 +134,10 @@
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            width="144"
+            height="128"
           />
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
@@ -131,10 +145,10 @@
         <article>
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg2000.jpg"
             alt="Перфоратор BOSCH BFG 2000"
-            width="220"
-            height="318"
+            width="127"
+            height="112"
           />
           <a href="#">12500 Р.</a>
           <span>32500 P.</span>
@@ -144,68 +158,38 @@
         <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
         <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
         <a href="#">
-          <img
-            src="https://via.placeholder.com/220x145"
-            alt="Bosch"
-            width="220"
-            height="145"
-          />
+          <img src="img/logo-bosch.png" alt="Bosch" width="126" height="37" />
+        </a>
+        <a href="#">
+          <img src="img/logo-makita.png" alt="Makita" width="123" height="40" />
+        </a>
+        <a href="#">
+          <img src="img/logo-dewalt.png" alt="DeWalt" width="146" height="44" />
         </a>
         <a href="#">
           <img
-            src="https://via.placeholder.com/220x145"
-            alt="Makita"
-            width="220"
-            height="145"
-          />
-        </a>
-        <a href="#">
-          <img
-            src="https://via.placeholder.com/220x145"
-            alt="DeWalt"
-            width="220"
-            height="145"
-          />
-        </a>
-        <a href="#">
-          <img
-            src="https://via.placeholder.com/220x145"
+            src="img/logo-interskol.png"
             alt="Интерскол"
-            width="220"
-            height="145"
+            width="200"
+            height="76"
           />
         </a>
         <a href="#">
           <img
-            src="https://via.placeholder.com/220x145"
+            src="img/logo-hitachi.png"
             alt="Hitachi"
-            width="220"
-            height="145"
+            width="169"
+            height="31"
           />
         </a>
         <a href="#">
-          <img
-            src="https://via.placeholder.com/220x145"
-            alt="LG"
-            width="220"
-            height="145"
-          />
+          <img src="img/logo-lg.png" alt="LG" width="121" height="73" />
         </a>
         <a href="#">
-          <img
-            src="https://via.placeholder.com/220x145"
-            alt="AEG"
-            width="220"
-            height="145"
-          />
+          <img src="img/logo-aeg.png" alt="AEG" width="151" height="98" />
         </a>
         <a href="#">
-          <img
-            src="https://via.placeholder.com/220x145"
-            alt="Metabo"
-            width="220"
-            height="145"
-          />
+          <img src="img/logo-metabo.png" alt="Metabo" width="206" height="73" />
         </a>
       </section>
       <section>
@@ -262,8 +246,8 @@
         <p>Вы можете забрать товар сами,заехав в наш офис:</p>
         <a href="#">
           <img
-            src="https://via.placeholder.com/300x158"
-            alt="Санкт-Петербург, Большая Конюшенная ул., дом 19"
+            src="img/map-preview.png"
+            alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"
             width="300"
             height="158"
           />
@@ -311,7 +295,12 @@
       <section id="Map">
         <h2>Как до нас добраться</h2>
         <!--Потом спрятать-->
-        <!--Здесь будет карта-->
+        <img
+          src="img/map-open.png"
+          width="943"
+          height="449"
+          alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"
+        />
         <button type="button">Закрыть</button>
       </section>
     </main>
