--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Техномарт</title>
+    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="img/180.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
   </head>
   <body>
     <header>
@@ -158,10 +162,10 @@
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            width="144"
+            height="128"
           />
         </article>
         <article>
@@ -171,10 +175,10 @@
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            width="144"
+            height="128"
           />
         </article>
         <article>
@@ -185,10 +189,10 @@
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            width="144"
+            height="128"
           />
         </article>
         <article>
@@ -199,10 +203,10 @@
           <a href="#">15500 Р.</a>
           <span>22500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg3000.jpg"
             alt="Перфоратор BOSCH BFG 3000"
-            width="220"
-            height="318"
+            width="127"
+            height="112"
           />
         </article>
         <article>
@@ -212,10 +216,10 @@
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            width="144"
+            height="128"
           />
         </article>
         <article>
@@ -225,10 +229,10 @@
           <a href="#">В закладки</a>
           <a href="#">12500 Р.</a>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg2000.jpg"
             alt="Перфоратор BOSCH BFG 2000"
-            width="220"
-            height="318"
+            width="127"
+            height="112"
           />
         </article>
         <article>
@@ -239,10 +243,10 @@
           <a href="#">15500 Р.</a>
           <span>22500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
-            alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            src="img/items-bfg3000.jpg"
+            alt="Перфоратор BOSCH BFG 3000"
+            width="127"
+            height="112"
           />
         </article>
         <article>
@@ -252,10 +256,10 @@
           <a href="#">25500 Р.</a>
           <span>30500 Р.</span>
           <img
-            src="https://via.placeholder.com/220x318"
+            src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            width="144"
+            height="128"
           />
         </article>
         <article>
@@ -265,10 +269,10 @@
           <a href="#">В закладки</a>
           <a href="#">12500 Р.</a>
           <img
-            src="https://via.placeholder.com/220x318"
-            alt="Перфоратор BOSCH BFG 6000"
-            width="220"
-            height="318"
+            src="img/items-bfg2000.jpg"
+            alt="Перфоратор BOSCH BFG 2000"
+            width="127"
+            height="112"
           />
         </article>
         <p>
