стилизую главную - начало

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8" />
     <title>Техномарт</title>
@@ -8,8 +8,8 @@
     <link rel="apple-touch-icon" href="img/180.png" />
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
-  <body>
-    <header>
+  <body class="page-body">
+    <header class="main-header">
       <a href="index.html"><h1>Техномарт</h1></a>
       <form action="https://echo.htmlacademy.ru" method="POST">
         <input
@@ -33,7 +33,7 @@
       <!--Вместо надписи будет иконка-->
       <a href="#">Мои заказы</a>
       <a href="#">Личный кабинет</a>
-      <nav>
+      <nav class="main-navigation">
         <ul>
           <li>
             <a href="index.html">Главная</a>
