--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
       </section>
     </main>
     <footer class="main-footer">
+      <div class="footer-1">
       <a class="logo"><h1>ТЕХНОМАРТ</h1></a>
       <section class="footer-contacts">
         <address>
@@ -383,6 +384,8 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div class="footer-2">
       <p class="footer-technomart-copyright">
         © 2010–2017 Компания «Техномарт» Все права защищены
       </p>
@@ -407,6 +410,7 @@
         Разработано —
         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </p>
+    </div>
     </footer>
   </body>
 </html>
