Попытка главной на гридах

--- a/catalog.html
+++ b/catalog.html
@@ -90,7 +90,7 @@
       </nav>
       </div>
     </header>
-    <main>
+    <main class="container">
       <section>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
@@ -365,6 +365,7 @@
       </section>
     </main>
     <footer class="main-footer">
+        <div class="container">
         <div class="footer-1">
         <a href="index.html" class="logo"><h1>ТЕХНОМАРТ</h1></a>
         <section class="footer-contacts">
@@ -442,6 +443,7 @@
           <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
       </div>
+    </div>
       </footer>
     </body>
   </html>
