--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
               </svg></button>
             <a class="button open-catalog-btn" href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
             <div class="slider slide-1">
+            <div class="slider-text-wrapper">
             <h3>ПЕРФОРАТОРЫ</h3>
             <p>Настоящие мужские игрушки</p>
+          </div>
             <!--
             <img
               src="https://via.placeholder.com/620x266"
@@ -139,8 +141,10 @@
           </div>
           <!--
           <div class="slider slide-2">
+            <div class="slider-text-wrapper">
             <h3>ДРЕЛИ</h3>
             <p>Соседям на радость!</p>
+            </div>
             <img
               src="https://via.placeholder.com/620x266"
               alt="Рабочий сверлит стену дрелью"
@@ -288,6 +292,7 @@
     </div>
     </div>
     <div class="additional-services-wrapper">
+      <div class="services-info">
       <section class="additional-services">
         <h2 class="hidden">Дополнительные услуги</h2>
         <h3 class="service-titles">Сервисы</h3>
@@ -334,6 +339,7 @@
       </div>
       -->
       </div>
+    </div>
       </section>
       <section class="company-info">
         <h2 class="hidden">Общая информация о компании</h2>
