--- a/catalog.html
+++ b/catalog.html
@@ -207,7 +207,7 @@
           <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">25500 Р.</a>
           <span class="old-price">30500 Р.</span>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
             width="144"
@@ -220,7 +220,7 @@
           <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">25500 Р.</a>
           <span class="old-price">30500 Р.</span>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
             width="144"
@@ -234,7 +234,7 @@
           <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">25500 Р.</a>
           <span class="old-price">30500 Р.</span>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
             width="144"
@@ -248,7 +248,7 @@
             <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">15500 Р.</a>
           <span class="old-price">22500 Р.</span>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg3000.jpg"
             alt="Перфоратор BOSCH BFG 3000"
             width="127"
@@ -261,7 +261,7 @@
           <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">25500 Р.</a>
           <span class="old-price">30500 Р.</span>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
             width="144"
@@ -274,7 +274,7 @@
           <a href="#" class="button-goods-buy">Купить</a>
             <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">12500 Р.</a>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg2000.jpg"
             alt="Перфоратор BOSCH BFG 2000"
             width="127"
@@ -288,7 +288,7 @@
           <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">15500 Р.</a>
           <span class="old-price">22500 Р.</span>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg3000.jpg"
             alt="Перфоратор BOSCH BFG 3000"
             width="127"
@@ -301,7 +301,7 @@
           <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">25500 Р.</a>
           <span class="old-price">30500 Р.</span>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg6000.jpg"
             alt="Перфоратор BOSCH BFG 6000"
             width="144"
@@ -314,7 +314,7 @@
           <a href="#" class="button-goods-buy">Купить</a>
           <a href="#" class="button-goods-bookmarks">В закладки</a>
           <a class="price" href="#">12500 Р.</a>
-          <img
+          <img class="product-card-image"
             src="img/items-bfg2000.jpg"
             alt="Перфоратор BOSCH BFG 2000"
             width="127"
